--- a/brush-parser/Cargo.toml
+++ b/brush-parser/Cargo.toml
@@ -27,7 +27,9 @@ arbitrary = { version = "1.4.2", optional = true, features = ["derive"] }
 bon = "3.8.1"
 cached = "0.56.0"
 indenter = "0.3.4"
-miette = { version = "7.6.0", optional = true, default-features = false, features = ["derive"] }
+miette = { version = "7.6.0", optional = true, default-features = false, features = [
+    "derive",
+] }
 peg = "0.8.5"
 thiserror = "2.0.17"
 tracing = "0.1.41"
