--- a/brush-builtins/Cargo.toml
+++ b/brush-builtins/Cargo.toml
@@ -136,6 +136,7 @@ futures = "0.3.31"
 itertools = "0.14.0"
 strum = "0.27.2"
 strum_macros = "0.27.2"
+thiserror = "2.0.17"
 tracing = "0.1.41"
 
 [target.'cfg(target_family = "wasm")'.dependencies]
