--- a/brush-interactive/Cargo.toml
+++ b/brush-interactive/Cargo.toml
@@ -33,6 +33,9 @@ reedline = { version = "0.43.0", optional = true }
 thiserror = "2.0.17"
 tracing = "0.1.41"
 
+[target.'cfg(unix)'.dependencies]
+nix = { version = "0.30.1", features = ["term"] }
+
 [target.'cfg(any(windows, unix))'.dependencies]
 tokio = { version = "1.48.0", features = ["macros", "signal"] }
 
