fix: do not pass along exported-but-unset vars

--- a/brush-shell/tests/cases/builtins/declare.yaml
+++ b/brush-shell/tests/cases/builtins/declare.yaml
@@ -128,6 +128,11 @@ cases:
       declare -x myexportedvar="exported variable"
       env | grep myexportedvar
 
+  - name: "Declare and export unset variable"
+    stdin: |
+      declare -x myunsetexportedvar
+      env | grep myunsetexportedvar
+
   - name: "Re-declaring variable"
     stdin: |
       var="value"
