--- a/brush-core/Cargo.toml
+++ b/brush-core/Cargo.toml
@@ -38,9 +38,9 @@ thiserror = "2.0.17"
 tracing = "0.1.41"
 
 [target.'cfg(target_family = "wasm")'.dependencies]
-tokio = { version = "1.48.0", features = ["io-util", "macros", "rt"] }
+tokio = { version = "1.48.0", features = ["io-util", "macros", "rt", "sync"] }
 
-[target.'cfg(any(windows, unix))'.dependencies]
+[target.'cfg(any(unix, windows))'.dependencies]
 hostname = "0.4.1"
 tokio = { version = "1.47.1", features = [
     "io-util",
