--- a/brush-shell/Cargo.toml
+++ b/brush-shell/Cargo.toml
@@ -60,13 +60,13 @@ tracing = "0.1.41"
 tracing-subscriber = "0.3.20"
 human-panic = "2.0.3"
 
-[target.'cfg(not(any(windows, unix)))'.dependencies]
+[target.'cfg(not(any(unix, windows)))'.dependencies]
 brush-interactive = { version = "^0.2.22", path = "../brush-interactive", features = [
     "minimal",
 ] }
 tokio = { version = "1.48.0", features = ["rt", "sync"] }
 
-[target.'cfg(any(windows, unix))'.dependencies]
+[target.'cfg(any(unix, windows))'.dependencies]
 brush-interactive = { version = "^0.2.22", path = "../brush-interactive", features = [
     "basic",
     "reedline",
