--- a/brush-core/Cargo.toml
+++ b/brush-core/Cargo.toml
@@ -38,9 +38,9 @@ thiserror = "2.0.17"
 tracing = "0.1.41"
 
 [target.'cfg(target_family = "wasm")'.dependencies]
-tokio = { version = "1.48.0", features = ["io-util", "macros", "rt"] }
+tokio = { version = "1.48.0", features = ["io-util", "macros", "rt", "sync"] }
 
-[target.'cfg(any(windows, unix))'.dependencies]
+[target.'cfg(any(unix, windows))'.dependencies]
 hostname = "0.4.1"
 tokio = { version = "1.47.1", features = [
     "io-util",
@@ -68,9 +68,6 @@ nix = { version = "0.30.1", features = [
 ] }
 terminfo = "0.9.0"
 uzers = "0.12.1"
-
-[target.'cfg(target_os = "linux")'.dependencies]
-procfs = "0.18.0"
 
 [target.wasm32-unknown-unknown.dependencies]
 getrandom = { version = "0.3.4", features = ["wasm_js"] }
