--- a/brush-shell/tests/cases/compound_cmds/arithmetic_for.yaml
+++ b/brush-shell/tests/cases/compound_cmds/arithmetic_for.yaml
@@ -66,3 +66,10 @@ cases:
         fi
       done
       echo "After for"
+
+  - name: "Arithmetic for with alternate syntax"
+    stdin: |
+      for ((i = 0; i < 5; i++)) {
+        echo "Iteration $i"
+      }
+
