--- a/brush-shell/tests/cases/redirection.yaml
+++ b/brush-shell/tests/cases/redirection.yaml
@@ -196,3 +196,19 @@ cases:
       # Dump the file
       echo "[10]"
       cat fd10.txt
+
+  - name: "Inheritance of fds from parent"
+    test_files:
+      - path: "test.sh"
+        contents: |
+          echo hi >&3
+    stdin: |
+      args=""
+
+      # NOTE: For now, brush doesn't inherit arbitrary all open fds by default like bash does.
+      # We need to explicitly specify which fds to inherit.
+      if [[ $BRUSH_VERSION ]]; then
+        args+=" --inherit-fd=3"
+      fi
+
+      $0 $args test.sh 3>output.txt
