--- a/brush-core/Cargo.toml
+++ b/brush-core/Cargo.toml
@@ -53,7 +53,7 @@ tokio = { version = "1.48.0", features = [
 ] }
 
 [target.'cfg(windows)'.dependencies]
-homedir = "0.3.4"
+homedir = "=0.3.4"
 whoami = "1.6.1"
 
 [target.'cfg(unix)'.dependencies]
