fix: expose -c flag via $-

--- a/brush-shell/tests/cases/options/default.yaml
+++ b/brush-shell/tests/cases/options/default.yaml
@@ -3,3 +3,6 @@ cases:
   - name: "Default options"
     stdin: |
       echo "Default options: $-"
+
+  - name: "Default options (-c)"
+    args: ["-c", 'echo "Default options: $-"']
