--- a/brush-shell/tests/cases/interactive.yaml
+++ b/brush-shell/tests/cases/interactive.yaml
@@ -3,7 +3,7 @@ incompatible_configs: ["sh"]
 cases:
   - name: "Basic interactive test"
     pty: true
-    ignore_stdout: true
+    ignore_whitespace: true # There's an extra newline for now in test output
     stdin: |
       #expect-prompt
       echo hi
