test: mark failing tests

--- a/brush-shell/tests/cases/errors.yaml
+++ b/brush-shell/tests/cases/errors.yaml
@@ -9,6 +9,7 @@ cases:
       echo "after expansion"
 
   - name: "Fatal error (non-interactive/subshell)"
+    known_failure: true
     ignore_stderr: true
     stdin: |
       echo "before expansion"
@@ -24,6 +25,7 @@ cases:
       echo "after expansion"
 
   - name: "Fatal error (non-interactive/command substitution)"
+    known_failure: true
     ignore_stderr: true
     stdin: |
       echo "before expansion"
@@ -31,6 +33,7 @@ cases:
       echo "after expansion"
 
   - name: "Fatal error (interactive/sourced file)"
+    known_failure: true
     ignore_stderr: true
     args: ["-i"]
     test_files:
@@ -44,6 +47,7 @@ cases:
       echo "after sourcing script with error"
 
   - name: "Fatal error (non-interactive/sourced file)"
+    known_failure: true
     ignore_stderr: true
     test_files:
       - path: error.sh
@@ -56,6 +60,7 @@ cases:
       echo "after sourcing script with error"
 
   - name: "Fatal error (interactive/executed script)"
+    known_failure: true
     ignore_stderr: true
     args: ["-i", "error.sh"]
     test_files:
@@ -84,6 +89,7 @@ cases:
         echo "after syntax error"
 
   - name: "Shell language syntax error (non-interactive)"
+    known_failure: true
     ignore_stderr: true
     stdin: |
       [[ -% 3 ]]
@@ -172,6 +178,7 @@ cases:
       echo "after special redirection"
 
   - name: "Compound command redirection error (command line)"
+    known_failure: true
     ignore_stderr: true
     args:
       - "-c"
@@ -247,6 +254,7 @@ cases:
       echo "after cat redirection"
 
   - name: "Variable assignment error (command line)"
+    known_failure: true
     ignore_stderr: true
     args:
       - "-c"
@@ -274,6 +282,7 @@ cases:
       echo "after readonly assignment"
 
   - name: "Expansion error (command line)"
+    known_failure: true
     ignore_stderr: true
     args:
       - "-c"
@@ -283,6 +292,7 @@ cases:
         echo "after expansion"
 
   - name: "Expansion error (non-interactive)"
+    known_failure: true
     ignore_stderr: true
     stdin: |
       echo "before expansion"
