--- a/brush-shell/tests/cases/status.yaml
+++ b/brush-shell/tests/cases/status.yaml
@@ -7,6 +7,7 @@ cases:
 
   - name: "Parse error status"
     ignore_stderr: true
+    known_failure: true
     stdin: |
       # Generate parse error
       for f done
