test: mark test as disabled on azl3

--- a/brush-shell/tests/cases/errors.yaml
+++ b/brush-shell/tests/cases/errors.yaml
@@ -79,6 +79,7 @@ cases:
           echo "after expansion"
 
   - name: "Shell language syntax error (command line)"
+    incompatible_os: ["azurelinux"] # Needs investigation
     ignore_stderr: true
     args:
       - "-c"
