test: add error handling tests, resolve nextest issue (#768)

--- a/brush-shell/tests/cases/status.yaml
+++ b/brush-shell/tests/cases/status.yaml
@@ -6,8 +6,8 @@ cases:
       echo "[1] Status: $?; pipe status: ${PIPESTATUS[@]}"
 
   - name: "Parse error status"
-    known_failure: true # Needs investigation
     ignore_stderr: true
+    known_failure: true
     stdin: |
       # Generate parse error
       for f done
