--- a/brush-shell/tests/cases/errors.yaml
+++ b/brush-shell/tests/cases/errors.yaml
@@ -275,6 +275,7 @@ cases:
       echo "after readonly assignment"
 
   - name: "Expansion error (command line)"
+    known_failure: true # Needs investigation
     ignore_stderr: true
     args:
       - "-c"
