--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -490,7 +490,7 @@ jobs:
         with:
           persist-credentials: false
           repository: "scop/bash-completion"
-          ref: "2.16.0"
+          ref: "2.17.0"
           path: "bash-completion"
 
       - name: Download prebuilt brush binaries
@@ -511,17 +511,12 @@ jobs:
           sudo apt-get install -y python3
           python3 -m pip install --user pytest pytest-xdist pytest-md-report pytest-json-report
 
-      - name: "Run test suite (oracle)"
-        working-directory: bash-completion/test
-        run: |
-          pytest -n 128 --no-summary ./t || true
-
       - name: "Run test suite (brush)"
         env:
           BASH_COMPLETION_TEST_BASH: ${{ github.workspace }}/binaries/brush --noprofile --input-backend=basic
         working-directory: bash-completion/test
         run: |
-          pytest -n 128 \
+          pytest \
               --json-report \
               --json-report-file=$GITHUB_WORKSPACE/test-results-bash-completion.json \
               ./t || true
